tests/fixtures/invalid/modules_duplicate/main.lby
import helper

fn shared n i64 -> i64
    n + 2

fn main -> i64
    shared(1)
